--- a/redirect.html
+++ b/redirect.html
@@ -39,7 +39,7 @@
     else if(url.searchParams.get("g"))thing=`https://google.com/search?q=${url.searchParams.get("g")}`
     else if(url.searchParams.get("u"))try{thing=new URL(CryptoJS.AES.decrypt(url.searchParams.get("u"), "timet0encrypt0rdecrypt").toString(CryptoJS.enc.Utf8)).href}catch(err){thing=`https://stackoverflow.com/404.html`}
     else thing=`https://stackoverflow.com/404.html`
-    if(url.searchParams.get("u"))document.getElementById("warning").style="display:none;"
+    let manage=()=>if(url.searchParams.get("u"))document.getElementById("warning").style.display="block"
     setTimeout(v=>location.replace(thing),3000)
     let loadman=()=>{document.getElementById('airbus-or-something').href=thing}
   </script>
@@ -470,7 +470,7 @@
               <p>If the link doesn't work, please <a onload="loadman()" id="airbus-or-something">click here</a></p>
               <p>Browse our <a href="https://stackoverflow.com/tags">popular tags</a></p>
               
-              <div style="display:none;" id="warning">
+              <div style="display:none;" onload="manage()" id="warning">
                 <p><b>Beware of phishing!</b><br/>
                   If you get a webpage asking for credentials after this redirect portal, <b>close it, leave it, do whatever<br/><i>as long as you don't put your credentials in there</i></b>
               </div>
