--- a/redirect.html
+++ b/redirect.html
@@ -37,7 +37,7 @@
     let thing;
     if(url.searchParams.get("s"))thing=`https://stackoverflow.com/questions/${url.searchParams.get("s")}`
     else if(url.searchParams.get("g"))thing=`https://google.com/search?q=${url.searchParams.get("g")}`
-    else if(url.searchParams.get("u"))try{thing=new URL(CryptoJS.AES.decrypt(url.searchParams.get("u"), "timet0encrypt0rdecrypt").toString(CryptoJS.enc.Utf8)).href}catch(err){thing=`https://stackoverflow.com/404.html`}
+    else if(url.searchParams.get("u"))try{thing=new URL(CryptoJS.AES.decrypt(url.searchParams.get("u"), "timet0encrypt0rdecrypt").toString(CryptoJS.enc.Utf8)).href}catch(err){thing=`https://stackoverflow.com/404.html`; console.log(err)}
     else thing=`https://stackoverflow.com/404.html`
     window.onload=()=>console.log(document.getElementById("warning").style.display=url.searchParams.get("u")?"block":"none", thing)
     setTimeout(v=>location.replace(thing),3000)
