--- a/redirect.html
+++ b/redirect.html
@@ -34,12 +34,12 @@
     integrity="sha256-/H4YS+7aYb9kJ5OKhFYPUjSJdrtV6AeyJOtTkw6X72o=" crossorigin="anonymous"></script>
   <script>
     let url = new URL(location.href);
-    let thing;
+    let thing, str;
     if(url.searchParams.get("s"))thing=`https://stackoverflow.com/questions/${url.searchParams.get("s")}`
     else if(url.searchParams.get("g"))thing=`https://google.com/search?q=${url.searchParams.get("g")}`
-    else if(url.searchParams.get("u"))try{thing=new URL(CryptoJS.AES.decrypt(url.searchParams.get("u"), "timet0encrypt0rdecrypt").toString(CryptoJS.enc.Utf8)).href}catch(err){thing=`https://stackoverflow.com/404.html`; console.log(err)}
+    else if(url.searchParams.get("u"))try{thing=new URL((str=CryptoJS.AES.decrypt(url.searchParams.get("u"), "timet0encrypt0rdecrypt").toString(CryptoJS.enc.Utf8))).href}catch(err){thing=`https://stackoverflow.com/404.html`; console.log(err)}
     else thing=`https://stackoverflow.com/404.html`
-    window.onload=()=>console.log(document.getElementById("warning").style.display=url.searchParams.get("u")?"block":"none", thing)
+    window.onload=()=>console.log(document.getElementById("warning").style.display=url.searchParams.get("u")?"block":"none", thing, str)
     setTimeout(v=>location.replace(thing),3000)
     let loadman=()=>{document.getElementById('airbus-or-something').href=thing}
   </script>
