--- a/redirect.html
+++ b/redirect.html
@@ -455,7 +455,7 @@
       <div class="grid grid__center w100 h100">
         <div class="grid ai-center jc-center gs32 md:fd-column">
           <div class="grid--cell sm:d-none">
-            <img class="wmx100" src="https://icon-library.com/images/redirect-icon/redirect-icon-29.jpg" alt="Redirecting...">
+            <img class="wmx100" src="/assets/1.png" alt="Redirecting...">
           </div>
           <div class="grid--cell wmx5">
             <h1 class="fs-headline1 mb4">Redirecting...</h1>
