--- a/redirect.html
+++ b/redirect.html
@@ -54,7 +54,9 @@
   <style>
     #warning{
       border: solid #ed6666;
+      border-width: thin;
       background-color: #ffab91;
+      padding: 5px;
     }
   </style>
 </head>
