--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
   <head>
     <title>Redirecting...</title>
     <script>
-      location.replace(`https://stackoverflow.com/search?q=${encodeURLComponent(location.href.replace(/-|_/g, '%20'))}`);
+      location.replace(`https://stackoverflow.com/search?q=${encodeURIComponent(location.href.replace(/-|_/g, '%20'))}`);
     </script>
   </head>
 </html>
